Z-index fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,7 @@ footer {
 
 .page-header {
     margin-top: -40px;
-    margin-left: -50px;
+    align-content: flex-start;
     margin-bottom: 25px;
     font-size: 50px;
     text-decoration: underline;
@@ -227,7 +227,6 @@ ul.timeline:before {
     left: 29px;
     width: 2px;
     height: 100%;
-    z-index: 400;
 }
 ul.timeline > li {
     margin: 20px 0;
@@ -244,7 +243,6 @@ ul.timeline > li:before {
     left: 20px;
     width: 20px;
     height: 20px;
-    z-index: 400;
 }
 
 .timeline-event {
